# numeric_cast

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: extending.rs  lib.rs  lossless.rs  panicking.rs  rounding.rs  truncating.rs  wrapping.rs
