[package]
name = "numeric_cast"
version = "0.1.1"
edition = "2021"
description = "safe cast between numbers"
license = "MIT"
repository = "https://github.com/Nugine/numeric_cast"
readme = "README.md"
documentation = "https://docs.rs/numeric_cast"
keywords = ["cast"]
categories = ["rust-patterns", "no-std"]
