[package]
name = "numeric_cast"
version = "0.2.2"
edition = "2021"
description = "safely cast between numbers"
license = "MIT"
repository = "https://github.com/Nugine/numeric_cast"
readme = "README.md"
documentation = "https://docs.rs/numeric_cast"
keywords = ["cast"]
categories = ["rust-patterns", "no-std"]
rust-version = "1.56.0"
